fix horizontal bar bug on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,17 @@
 html, body
 {
   /*font-family: 'Raleway';*/
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+/*    overflow-x: hidden;*/
+}
+
+@media only screen and (max-width: 991px)
+{
+	* {
+	    margin: 0px;
+   		padding: 0px;
+	}
 }
